--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
             <nav class="page-navigator">
                 <ul class="menu list">
-                    <li class="menu__item"><a class="menu__link link current" href="#">Студія</a></li>
+                    <li class="menu__item"><a class="menu__link link menu__link--current" href="#">Студія</a></li>
                     <li class="menu__item"><a class="menu__link link" href="./portfolio.html">Портфоліо</a></li>
                     <li class="menu__item"><a class="menu__link link" href="#">Контакти</a></li>
                 </ul>
@@ -28,16 +28,17 @@
 
             <ul class="menu-contact list">
                 <li class="menu-contact__item">
-                    <a class="contact link" href="mailto:info@devstudio.com">
-                        <svg class="contact__icon" width="16" height="12">
+                    <a class="menu-contact__link link" href="mailto:info@devstudio.com">
+                        <svg class="menu-contact__icon" width="16" height="12">
                             <use href="./img/sprite.svg#envelope"></use>
                         </svg>info@devstudio.com
                     </a>
                 </li>
                 
                 <li class="menu-contact__item">
-                    <a class="contact link" href="tel:+380961111111"><svg class="contact__icon" width="10" height="16">
-                        <use href="./img/sprite.svg#phone"></use>
+                    <a class="menu-contact__link link" href="tel:+380961111111">
+                        <svg class="menu-contact__icon" width="10" height="16">
+                            <use href="./img/sprite.svg#phone"></use>
                         </svg>+38 096 111 11 11
                     </a>
                 </li>
